==> BraulioSilv4/IFS_AMS/bq79616.cpp <==
#include <string.h>
#include "bq79616.hpp"
#define DEBUG true

void SpiWake79600(void) {
    // pull the nCS line low, wait 2 µs
    digitalWrite(nCS, LOW);
    delayMicroseconds(2);
    
    // pull the MOSI/RX line low for a duration of 2.75 ms and pull it back high
    digitalWrite(MOSI, LOW);
    delayMicroseconds(2750); 
    digitalWrite(MOSI, HIGH);

    // wait 2 µs, and finally pull nCS pin high again
    delayMicroseconds(2);
    digitalWrite(nCS, HIGH);
}

int SpiWriteReg(char bID, uint16_t wAddr, uint64_t dwData, char bLen, char bWriteType) {
    // device address, register start address, data bytes, data length, write type (single, broadcast, stack)
    bRes = 0;
    memset(spiBuf,0,sizeof(spiBuf));
    while(!isSPIReady()) delayMicroseconds(5); //wait until SPI_RDY is ready
    switch (bLen) {
    case 1:
        spiBuf[0] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 1, bWriteType);
        break;
    case 2:
        spiBuf[0] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[1] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 2, bWriteType);
        break;
    case 3:
        spiBuf[0] = (dwData & 0x0000000000FF0000) >> 16;
        spiBuf[1] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[2] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 3, bWriteType);
        break;
    case 4:
        spiBuf[0] = (dwData & 0x00000000FF000000) >> 24;
        spiBuf[1] = (dwData & 0x0000000000FF0000) >> 16;
        spiBuf[2] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[3] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 4, bWriteType);
        break;
    case 5:
        spiBuf[0] = (dwData & 0x000000FF00000000) >> 32;
        spiBuf[1] = (dwData & 0x00000000FF000000) >> 24;
        spiBuf[2] = (dwData & 0x0000000000FF0000) >> 16;
        spiBuf[3] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[4] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 5, bWriteType);
        break;
    case 6:
        spiBuf[0] = (dwData & 0x0000FF0000000000) >> 40;
        spiBuf[1] = (dwData & 0x000000FF00000000) >> 32;
        spiBuf[2] = (dwData & 0x00000000FF000000) >> 24;
        spiBuf[3] = (dwData & 0x0000000000FF0000) >> 16;
        spiBuf[4] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[5] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 6, bWriteType);
        break;
    case 7:
        spiBuf[0] = (dwData & 0x00FF000000000000) >> 48;
        spiBuf[1] = (dwData & 0x0000FF0000000000) >> 40;
        spiBuf[2] = (dwData & 0x000000FF00000000) >> 32;
        spiBuf[3] = (dwData & 0x00000000FF000000) >> 24;
        spiBuf[4] = (dwData & 0x0000000000FF0000) >> 16;
        spiBuf[5] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[6] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 7, bWriteType);
        break;
    case 8:
        spiBuf[0] = (dwData & 0xFF00000000000000) >> 56;
        spiBuf[1] = (dwData & 0x00FF000000000000) >> 48;
        spiBuf[2] = (dwData & 0x0000FF0000000000) >> 40;
        spiBuf[3] = (dwData & 0x000000FF00000000) >> 32;
        spiBuf[4] = (dwData & 0x00000000FF000000) >> 24;
        spiBuf[5] = (dwData & 0x0000000000FF0000) >> 16;
        spiBuf[6] = (dwData & 0x000000000000FF00) >> 8;
        spiBuf[7] = dwData & 0x00000000000000FF;
        bRes = SpiWriteFrame(bID, wAddr, spiBuf, 8, bWriteType);
        break;
    default:
        break;
    }
    return bRes;
}

int SpiReadReg(char bID, uint16_t wAddr, uint16_t * pData, char bLen, uint32_t dwTimeOut, char bWriteType) {
    // device address, register start address, byte frame pointer to store data, data length, read type (single, broadcast, stack)

    bRes = 0; //total bytes received

    //Serial.println(isSPIReady());
    while(!isSPIReady()) {
        delayMicroseconds(1); //wait until SPI_RDY is ready
    }
    //send the read request to the 600
    spiReturn = bLen - 1;
    SpiWriteFrame(bID, wAddr, &spiReturn, 1, bWriteType); //send the read request command frame
    delayMicroseconds(5*TOTALBOARDS); //wait propagation time for each board

    //Serial.println(isSPIReady());

    uint16_t * movingPointer = pData;
    
    //prepare the correct number of bytes for the device to read
    if (bWriteType == FRMWRT_SGL_R)
    {
        M = bLen + 6;
    }
    else if (bWriteType == FRMWRT_STK_R)
    {
        M = (bLen + 6) * (TOTALBOARDS - 1);
    }
    else if (bWriteType == FRMWRT_ALL_R)
    {
        M = (bLen + 6) * TOTALBOARDS;
    }
    else
    {
        while(1); //infinite loop to catch error
    }

    //prepare the number of loops of 128-byte reads that need to occur
    i = (int)(M/128);
    //prepare the remainder that is left over after the last full 128-byte read
    K = M - i*128;
    
    //loop until we've read all data bytes
    while(i>(-1))
    {
        while(!isSPIReady()) {
            delayMicroseconds(100);
        }  //wait until SPI_RDY is ready
        //if there is more than 128 bytes remaining
        if(i>0)
        {
            if (bWriteType == FRMWRT_SGL_R)
            {
                digitalWrite(nCS, LOW);
                for(int i = 0; i < K; i++){
                    pData[i] = SPI.transfer(0xFF);
                }
                digitalWrite(nCS, HIGH);
            }
            else if (bWriteType == FRMWRT_STK_R)
            {
                digitalWrite(nCS, LOW);
                for(int i = 0; i < K; i++){
                    pData[i] = SPI.transfer(0xFF);
                }
                digitalWrite(nCS, HIGH);
            }
            else if (bWriteType == FRMWRT_ALL_R)
            {
                digitalWrite(nCS, LOW);
                for(int i = 0; i < K; i++){
                    pData[i] = SPI.transfer(0xFF);
                }
                digitalWrite(nCS, HIGH);
            }
            movingPointer+=128;
        }

        //else if there is less than 128 bytes remaining
        else
        {
            if (bWriteType == FRMWRT_SGL_R)
            {
                digitalWrite(nCS, LOW);
                for(int i = 0; i < K; i++){
                    pData[i] = SPI.transfer(0xFF);
                }
                digitalWrite(nCS, HIGH);
                bRes = bLen + 6;
            }
            else if (bWriteType == FRMWRT_STK_R)
            {
                digitalWrite(nCS, LOW);
                for(int i = 0; i < K; i++){
                    pData[i] = SPI.transfer(0xFF);
                }
                digitalWrite(nCS, HIGH);
                bRes = (bLen + 6) * (TOTALBOARDS - 1);
            }
            else if (bWriteType == FRMWRT_ALL_R)
            {
                digitalWrite(nCS, LOW);
                for(int i = 0; i < K; i++){
                    pData[i] = SPI.transfer(0xFF);
                }
                digitalWrite(nCS, HIGH);
                bRes = (bLen + 6) * TOTALBOARDS;
            }
        }

        i--; //decrement the number of groups of 128 bytes
    }
    numReads++;
    return bRes;
}
